chore: add cloudfare R2 bucket config

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.12.159</version>
+		</dependency>
 	</dependencies>
 
 	<build>
