fix: update unit tests to fit the changes

--- a/src/main/resources/application.example.properties
+++ b/src/main/resources/application.example.properties
@@ -9,3 +9,13 @@ spring.datasource.password=
 # jpa config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# jwt keys
+jwt.private.key=
+jwt.public.key=
+
+# bucket config
+cloudfare.endpoint.url=
+cloudfare.bucket.name=
+aws.access.key=
+aws.secret.access.key=
