--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.12.159</version>
 		</dependency>
+		<dependency>
+			<groupId>com.stripe</groupId>
+			<artifactId>stripe-java</artifactId>
+			<version>24.16.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
